--- a/slicing-ios/SlicingGame/Resources/Localization/Base.lproj/Localizable.strings
+++ b/slicing-ios/SlicingGame/Resources/Localization/Base.lproj/Localizable.strings
@@ -14,3 +14,5 @@
 // Game
 "GAME_COMPLETE_LEVEL_TITLE" = "Congratulations!";
 "GAME_COMPLETE_LEVEL_TEXT" = "You've reached the clear target to reveal the background";
+"GAME_FAILED_TITLE" = "Too bad...";
+"GAME_FAILED_TEXT" = "Something was hit while making your slice, you'll have to start over";
